--- a/.env
+++ b/.env
@@ -20,13 +20,13 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-# DB_HOST=47.236.49.229
-DB_PORT=3306
-DB_DATABASE=agenda_online3
-DB_USERNAME=root
-DB_PASSWORD=
+# DB_CONNECTION=mysql
+# DB_HOST=127.0.0.1
+# # DB_HOST=47.236.49.229
+# DB_PORT=3306
+# DB_DATABASE=agenda_online3
+# DB_USERNAME=root
+# DB_PASSWORD=
 
 # DB_CONNECTION=mysql
 # # DB_HOST=127.0.0.1
@@ -37,13 +37,13 @@ DB_PASSWORD=
 # DB_PASSWORD=@Skw12345
 # QUEUE_CONNECTION=database
 
-# DB_CONNECTION=mysql
-# # DB_HOST=127.0.0.1
-# DB_HOST=47.236.49.229
-# DB_PORT=3306
-# DB_DATABASE=cash_bank_ptpn
-# DB_USERNAME=agenda_user_new
-# DB_PASSWORD=@Skw12345
+DB_CONNECTION=mysql
+# DB_HOST=127.0.0.1
+DB_HOST=47.236.49.229
+DB_PORT=3306
+DB_DATABASE=cash_bank_ptpn
+DB_USERNAME=agenda_user_new
+DB_PASSWORD=@Skw12345
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
