--- a/.env
+++ b/.env
@@ -45,7 +45,7 @@ DB_DATABASE=cash_bank_new
 DB_USERNAME=agenda_user_new
 DB_PASSWORD=@Skw12345
 
-SESSION_DRIVER=file
+SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
